using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public static class Constants 
{

    //Animations Section

    public static string IdleAnimTrig = "Idle";
    public static string JumpAnimTrig = "Jump";
    public static string MoveAnimTrig = "Run";
    public static string AttackAnimTrig = "Attack";


    //Pickables
    public static string CoinTag = "Coin";
    public static string GemTag = "Gem";





}
